better resets and build tasks

--- a/_source/css/utilities/_html5-boilerplate.scss
+++ b/_source/css/utilities/_html5-boilerplate.scss
@@ -13,8 +13,8 @@
 // =============================================================================
 
 html {
-  color: $black;
-  font-size: 1em;
+  color: black;
+  font-size: 10px;
   line-height: 1.4;
 }
 
