--- a/_source/css/utilities/_reset.scss
+++ b/_source/css/utilities/_reset.scss
@@ -135,8 +135,19 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
-  margin: 0; // PREVIOUS VALUE: margin: 0.67em 0;
+  font-size: 3.2em;
+  // PREVIOUS VALUE: margin: 0.67em 0;
+}
+h2{ font-size: 2.4em; }
+h3{ font-size: 2.0em; }
+h4{ font-size: 1.6em; }
+h5{ font-size: 1.4em; }
+h6{ font-size: 1.2em; }
+p{  font-size: 1.2em; }
+
+h1, h2, h3, h4, h5, h6{
+  margin: 0 0 0.5em 0;
+  line-height: 1;
 }
 
 /**
