--- a/_source/index.jade
+++ b/_source/index.jade
@@ -5,5 +5,5 @@ html(lang="en")
     title Playground
     link(rel="stylesheet", href="css/styles.css")
   body
-    h1 Playground Test
+    include templates/content.jade
     script(type="text/javascript", src="js/scripts.js")
