--- a/_source/index.jade
+++ b/_source/index.jade
@@ -1,9 +1,7 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    title Playground
-    link(rel="stylesheet", href="css/styles.css")
-  body
-    include templates/content.jade
-    script(type="text/javascript", src="js/scripts.js")
+extends ./_layout.jade
+
+block content
+  include ./templates/content.jade
+
+block prepend scripts
+  script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
