--- a/_source/_layout.pug
+++ b/_source/_layout.pug
@@ -4,7 +4,7 @@ block vars
 doctype html
 html(lang="en")
   head
-    include templates/head.jade
+    include templates/head.pug
   body(class="#{bodyClass}")
     block content
     block scripts
