--- a/_source/index.pug
+++ b/_source/index.pug
@@ -1,7 +1,7 @@
-extends ./_layout.jade
+extends ./_layout.pug
 
 block content
-  include ./templates/content.jade
+  include ./templates/content.pug
 
 block prepend scripts
   script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
