--- a/_source/_layout.pug
+++ b/_source/_layout.pug
@@ -5,7 +5,7 @@ doctype html
 html(lang="en")
   head
     include templates/head.pug
-  body(class="#{bodyClass}")
+  body(class=bodyClass)
     block content
     block scripts
       script(type="text/javascript", src="js/scripts.js")
