--- a/_source/templates/head.pug
+++ b/_source/templates/head.pug
@@ -4,3 +4,4 @@ meta(name="viewport", content="width=device-width, initial-scale=1")
 title Playground
 
 link(rel='stylesheet', type='text/css', href="css/styles.css")
+include ./icons.pug
