revised template directory structure
- isolate the page `.pug` files more
- separate the content sections from the layout-level partials

--- a/_source/templates/_layout.pug
+++ b/_source/templates/_layout.pug
@@ -4,7 +4,7 @@ block vars
 doctype html
 html(lang="en")
   head
-    include templates/head.pug
+    include ./partials/head.pug
   body(class=bodyClass)
     block content
     block scripts
