--- a/_source/templates/partials/head.pug
+++ b/_source/templates/partials/head.pug
@@ -1,7 +1,8 @@
 meta(charset="UTF-8")
 meta(name="viewport", content="width=device-width, initial-scale=1")
 
-title Playground
+title Patrick and Kelsey Sullivan
 
+link(rel="stylesheet", type='text/css', href="https://fonts.googleapis.com/css?family=Libre+Baskerville")
 link(rel='stylesheet', type='text/css', href="css/styles.css")
 include ./icons.pug
