--- a/_source/templates/partials/icons.pug
+++ b/_source/templates/partials/icons.pug
@@ -1,1 +1,3 @@
 //- link(rel='mask-icon' href='logo.svg' color='#ff0033')
+link(rel="icon", type="image/png", href="favicon.png", sizes="32x32")
+link(rel="icon", type="image/png", href="favicon.png", sizes="16x16")
