--- a/_source/templates/sections/primary.pug
+++ b/_source/templates/sections/primary.pug
@@ -1,5 +1,38 @@
-.primary
-  h1
-    | August 20
-    sup th
-    | , 2016
+section.primary
+  ul.grid
+    li
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li.large
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li.large
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li.featured
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li.large
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li.large
+      header
+        h1 Label Headline
+        h2 Subheadline
+    li
+      header
+        h1 Label Headline
+        h2 Subheadline
